--- a/php.editor/src/org/netbeans/modules/php/editor/indent/ui/FmtBlankLines.form
+++ b/php.editor/src/org/netbeans/modules/php/editor/indent/ui/FmtBlankLines.form
@@ -1,4 +1,4 @@
-<?xml version="1.1" encoding="UTF-8" ?>
+<?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.4" maxVersion="1.4" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
   <Properties>
@@ -26,7 +26,7 @@
     <AuxValue name="FormSettings_listenerGenerationStyle" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_variablesLocal" type="java.lang.Boolean" value="false"/>
     <AuxValue name="FormSettings_variablesModifier" type="java.lang.Integer" value="2"/>
-    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,3,84,0,0,2,-69"/>
+    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,3,82,0,0,1,41"/>
   </AuxValues>
 
   <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout"/>
@@ -73,73 +73,60 @@
                   <Group type="102" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" attributes="0">
+                          <Component id="betweenFieldsLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Group type="102" alignment="0" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="betweenFieldsLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  <Group type="102" alignment="0" attributes="0">
-                                      <Group type="103" groupAlignment="0" attributes="0">
-                                          <Group type="103" groupAlignment="0" attributes="0">
-                                              <Group type="102" alignment="1" attributes="0">
-                                                  <Group type="103" groupAlignment="0" attributes="0">
-                                                      <Component id="bClosePHPTagLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                                                      <Component id="bUseTraitLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                                                      <Component id="aOpenPHPTagHTMLLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                                                  </Group>
-                                                  <EmptySpace type="unrelated" min="-2" max="-2" attributes="0"/>
-                                              </Group>
-                                              <Component id="bMethodsLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                                              <Component id="bFunctionEndLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                                              <Component id="aMethodsLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                                              <Component id="aOpenPHPTagLebel" alignment="0" min="-2" max="-2" attributes="0"/>
-                                              <Component id="aFieldsLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                                          </Group>
-                                          <Component id="bFieldsLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                                          <Component id="aClassLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                                          <Component id="bClassEndLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                                          <Component id="aClassHeaderLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                                          <Component id="bClassLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                                          <Component id="aUseLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                                          <Component id="bUseLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                                          <Component id="aNamespaceLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                                          <Component id="bNamespaceLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Group type="103" groupAlignment="0" attributes="0">
+                                      <Group type="103" alignment="1" groupAlignment="0" attributes="0">
+                                          <Component id="bClosePHPTagLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                          <Component id="bUseTraitLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                          <Component id="aOpenPHPTagHTMLLabel" alignment="0" min="-2" max="-2" attributes="0"/>
                                       </Group>
-                                      <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
-                                      <Group type="103" groupAlignment="0" attributes="0">
-                                          <Group type="102" alignment="0" attributes="0">
-                                              <EmptySpace min="-2" max="-2" attributes="0"/>
-                                              <Group type="103" groupAlignment="1" attributes="0">
-                                                  <Component id="aMethodsField" linkSize="1" alignment="1" min="-2" max="-2" attributes="3"/>
-                                                  <Component id="bMethodsField" linkSize="1" alignment="0" min="-2" max="-2" attributes="3"/>
-                                                  <Component id="aFieldsField" linkSize="1" alignment="0" min="-2" max="-2" attributes="3"/>
-                                                  <Component id="bFunctionEndField" linkSize="1" alignment="1" min="-2" max="-2" attributes="3"/>
-                                                  <Component id="betweenFields" linkSize="1" alignment="0" min="-2" max="-2" attributes="1"/>
-                                                  <Component id="bFieldsField" linkSize="1" alignment="0" min="-2" max="-2" attributes="3"/>
-                                                  <Component id="aClassField" linkSize="1" alignment="0" min="-2" max="-2" attributes="3"/>
-                                                  <Component id="bClassEndField" linkSize="1" alignment="0" min="-2" max="-2" attributes="3"/>
-                                                  <Component id="aClassHeaderField" linkSize="1" alignment="0" min="-2" max="-2" attributes="3"/>
-                                                  <Component id="bClassField" linkSize="1" alignment="0" min="-2" max="-2" attributes="3"/>
-                                                  <Component id="aUseField" linkSize="1" alignment="0" min="-2" max="-2" attributes="3"/>
-                                                  <Component id="bUseField" linkSize="1" alignment="0" min="-2" max="-2" attributes="3"/>
-                                                  <Component id="aNamespaceField" linkSize="1" alignment="0" min="-2" max="-2" attributes="3"/>
-                                                  <Component id="bNamespaceField" linkSize="1" alignment="0" min="-2" max="-2" attributes="3"/>
-                                              </Group>
-                                          </Group>
-                                          <Component id="aOpenPHPTagField" linkSize="1" min="-2" max="-2" attributes="3"/>
-                                          <Group type="103" alignment="1" groupAlignment="0" max="-2" attributes="0">
-                                              <Component id="bUseTraitField" linkSize="1" min="-2" max="-2" attributes="0"/>
-                                              <Component id="bClosePHPTagField" linkSize="1" alignment="0" min="-2" max="-2" attributes="3"/>
-                                              <Component id="aOpenPHPTagHTMLField" linkSize="1" alignment="0" min="-2" max="-2" attributes="3"/>
-                                          </Group>
-                                      </Group>
+                                      <Component id="bMethodsLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                      <Component id="bFunctionEndLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                      <Component id="aMethodsLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                      <Component id="aOpenPHPTagLebel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                      <Component id="aFieldsLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  </Group>
+                                  <Component id="bFieldsLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="aClassLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="bClassEndLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="aClassHeaderLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="bClassLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="aUseLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="bUseLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="aNamespaceLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="bNamespaceLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                              <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Group type="103" alignment="0" groupAlignment="1" attributes="0">
+                                      <Component id="aMethodsField" linkSize="1" alignment="1" min="-2" max="-2" attributes="3"/>
+                                      <Component id="bMethodsField" linkSize="1" alignment="0" min="-2" max="-2" attributes="3"/>
+                                      <Component id="aFieldsField" linkSize="1" alignment="0" min="-2" max="-2" attributes="3"/>
+                                      <Component id="bFunctionEndField" linkSize="1" alignment="1" min="-2" max="-2" attributes="3"/>
+                                      <Component id="betweenFields" linkSize="1" alignment="0" min="-2" max="-2" attributes="1"/>
+                                      <Component id="bFieldsField" linkSize="1" alignment="0" min="-2" max="-2" attributes="3"/>
+                                      <Component id="aClassField" linkSize="1" alignment="0" min="-2" max="-2" attributes="3"/>
+                                      <Component id="bClassEndField" linkSize="1" alignment="0" min="-2" max="-2" attributes="3"/>
+                                      <Component id="aClassHeaderField" linkSize="1" alignment="0" min="-2" max="-2" attributes="3"/>
+                                      <Component id="bClassField" linkSize="1" alignment="0" min="-2" max="-2" attributes="3"/>
+                                      <Component id="aUseField" linkSize="1" alignment="0" min="-2" max="-2" attributes="3"/>
+                                      <Component id="bUseField" linkSize="1" alignment="0" min="-2" max="-2" attributes="3"/>
+                                      <Component id="aNamespaceField" linkSize="1" alignment="0" min="-2" max="-2" attributes="3"/>
+                                      <Component id="bNamespaceField" linkSize="1" alignment="0" min="-2" max="-2" attributes="3"/>
+                                  </Group>
+                                  <Component id="aOpenPHPTagField" linkSize="1" min="-2" max="-2" attributes="3"/>
+                                  <Group type="103" alignment="1" groupAlignment="0" max="-2" attributes="0">
+                                      <Component id="bUseTraitField" linkSize="1" min="-2" max="-2" attributes="0"/>
+                                      <Component id="bClosePHPTagField" linkSize="1" alignment="0" min="-2" max="-2" attributes="3"/>
+                                      <Component id="aOpenPHPTagHTMLField" linkSize="1" alignment="0" min="-2" max="-2" attributes="3"/>
                                   </Group>
                               </Group>
-                              <EmptySpace min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <Group type="102" alignment="0" attributes="0">
-                              <Component id="cbGroupFields" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace max="-2" attributes="0"/>
-                          </Group>
+                          <Component id="cbGroupFields" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
+                      <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
