--- a/code.analysis/src/org/netbeans/modules/analysis/RunAnalysisPanel.form
+++ b/code.analysis/src/org/netbeans/modules/analysis/RunAnalysisPanel.form
@@ -57,6 +57,11 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JComboBox" name="configurationCombo">
+      <Properties>
+        <Property name="prototypeDisplayValue" type="java.lang.Object" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+          <Connection code="COMBO_PROTOTYPE" type="code"/>
+        </Property>
+      </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="configurationComboActionPerformed"/>
       </Events>
@@ -121,6 +126,9 @@
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
           <StringArray count="0"/>
+        </Property>
+        <Property name="prototypeDisplayValue" type="java.lang.Object" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+          <Connection code="COMBO_PROTOTYPE" type="code"/>
         </Property>
       </Properties>
       <Constraints>
