fixes in css functional tests

--- a/web.core.syntax/test/qa-functional/data/CSSCompletionTestProjects/CSSCompletionTest/web/testTagNames.css
+++ b/web.core.syntax/test/qa-functional/data/CSSCompletionTestProjects/CSSCompletionTest/web/testTagNames.css
@@ -13,14 +13,7 @@ table
 
 
 /**CC
-h1, button > ba|
-base
-h1, button > base
-*/
-
-
-/**CC
-h1, button > ba|
+h1, button > b|
 base
 h1, button > base
 */
