--- a/php.project/src/org/netbeans/modules/php/project/ui/customizer/RunAsWebAdvanced.form
+++ b/php.project/src/org/netbeans/modules/php/project/ui/customizer/RunAsWebAdvanced.form
@@ -1,15 +1,10 @@
-<?xml version="1.1" encoding="UTF-8" ?>
+<?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.5" maxVersion="1.7" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
   <NonVisualComponents>
     <Component class="javax.swing.ButtonGroup" name="debugUrlButtonGroup">
     </Component>
   </NonVisualComponents>
-  <Properties>
-    <Property name="focusTraversalPolicy" type="java.awt.FocusTraversalPolicy" editor="org.netbeans.modules.a11ychecker.traverse.FocusTraversalPolicyEditor">
-      <SerializedValue value="-84,-19,0,5,115,114,0,59,111,114,103,46,110,101,116,98,101,97,110,115,46,109,111,100,117,108,101,115,46,97,49,49,121,99,104,101,99,107,101,114,46,116,114,97,118,101,114,115,101,46,77,121,84,114,97,118,101,114,115,97,108,80,111,108,105,99,121,-117,45,-95,-30,56,-106,56,86,2,0,3,76,0,3,101,110,100,116,0,18,76,106,97,118,97,47,108,97,110,103,47,83,116,114,105,110,103,59,76,0,12,115,97,118,101,100,66,117,116,116,111,110,115,116,0,18,76,106,97,118,97,47,117,116,105,108,47,86,101,99,116,111,114,59,76,0,5,115,116,97,114,116,113,0,126,0,1,120,112,112,115,114,0,16,106,97,118,97,46,117,116,105,108,46,86,101,99,116,111,114,-39,-105,125,91,-128,59,-81,1,3,0,3,73,0,17,99,97,112,97,99,105,116,121,73,110,99,114,101,109,101,110,116,73,0,12,101,108,101,109,101,110,116,67,111,117,110,116,91,0,11,101,108,101,109,101,110,116,68,97,116,97,116,0,19,91,76,106,97,118,97,47,108,97,110,103,47,79,98,106,101,99,116,59,120,112,0,0,0,0,0,0,0,8,117,114,0,19,91,76,106,97,118,97,46,108,97,110,103,46,79,98,106,101,99,116,59,-112,-50,88,-97,16,115,41,108,2,0,0,120,112,0,0,0,10,115,114,0,56,111,114,103,46,110,101,116,98,101,97,110,115,46,109,111,100,117,108,101,115,46,97,49,49,121,99,104,101,99,107,101,114,46,116,114,97,118,101,114,115,101,46,77,121,83,97,118,105,110,103,66,117,116,116,111,110,-19,-86,-80,71,10,30,-18,-64,2,0,2,76,0,4,110,97,109,101,113,0,126,0,1,76,0,8,110,101,120,116,78,97,109,101,113,0,126,0,1,120,112,116,0,23,114,101,109,111,118,101,80,97,116,104,77,97,112,112,105,110,103,66,117,116,116,111,110,116,0,18,112,114,111,120,121,72,111,115,116,84,101,120,116,70,105,101,108,100,115,113,0,126,0,9,116,0,20,110,101,119,80,97,116,104,77,97,112,112,105,110,103,66,117,116,116,111,110,113,0,126,0,11,115,113,0,126,0,9,113,0,126,0,12,116,0,18,112,114,111,120,121,80,111,114,116,84,101,120,116,70,105,101,108,100,115,113,0,126,0,9,116,0,21,100,101,102,97,117,108,116,85,114,108,82,97,100,105,111,66,117,116,116,111,110,116,0,17,97,115,107,85,114,108,82,97,100,105,111,66,117,116,116,111,110,115,113,0,126,0,9,113,0,126,0,19,116,0,27,100,111,78,111,116,79,112,101,110,66,114,111,119,115,101,114,82,97,100,105,111,66,117,116,116,111,110,115,113,0,126,0,9,113,0,126,0,21,113,0,126,0,14,115,113,0,126,0,9,113,0,126,0,16,112,115,113,0,126,0,9,116,0,16,112,97,116,104,77,97,112,112,105,110,103,84,97,98,108,101,112,112,112,120,112"/>
-    </Property>
-  </Properties>
   <AccessibilityProperties>
     <Property name="AccessibleContext.accessibleName" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
       <ResourceString bundle="org/netbeans/modules/php/project/ui/customizer/Bundle.properties" key="RunAsWebAdvanced.AccessibleContext.accessibleName" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
@@ -37,32 +32,37 @@
               <EmptySpace min="-2" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="1" attributes="0">
-                      <Component id="pathMappingScrollPane" pref="459" max="32767" attributes="0"/>
+                      <Component id="pathMappingScrollPane" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="removePathMappingButton" linkSize="1" min="-2" max="-2" attributes="0"/>
                           <Component id="newPathMappingButton" linkSize="1" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <Component id="debugUrlLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Group type="102" alignment="0" attributes="0">
-                      <Component id="defaultUrlRadioButton" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" max="-2" attributes="0"/>
-                      <Component id="defaultUrlPreviewLabel" min="-2" max="-2" attributes="0"/>
-                  </Group>
-                  <Component id="askUrlRadioButton" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="doNotOpenBrowserRadioButton" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="pathMappingLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="pathMappingInfoLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="proxyLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Group type="102" alignment="0" attributes="0">
-                      <Component id="proxyHostLabel" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="proxyHostTextField" min="-2" pref="207" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="proxyPortLabel" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="proxyPortTextField" min="-2" max="-2" attributes="0"/>
+                  <Group type="102" attributes="0">
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="debugUrlLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Group type="102" alignment="0" attributes="0">
+                              <Component id="defaultUrlRadioButton" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" max="-2" attributes="0"/>
+                              <Component id="defaultUrlPreviewLabel" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <Component id="askUrlRadioButton" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="doNotOpenBrowserRadioButton" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="pathMappingLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="pathMappingInfoLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="proxyLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Group type="102" alignment="0" attributes="0">
+                              <Component id="proxyHostLabel" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="proxyHostTextField" min="-2" pref="207" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="proxyPortLabel" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="proxyPortTextField" min="-2" pref="40" max="-2" attributes="0"/>
+                          </Group>
+                      </Group>
+                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
@@ -362,11 +362,6 @@
       </AccessibilityProperties>
     </Component>
     <Component class="javax.swing.JTextField" name="proxyPortTextField">
-      <Properties>
-        <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-          <Dimension value="[46, 19]"/>
-        </Property>
-      </Properties>
       <AccessibilityProperties>
         <Property name="AccessibleContext.accessibleDescription" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
           <ResourceString bundle="org/netbeans/modules/php/project/ui/customizer/Bundle.properties" key="RunAsWebAdvanced.proxyPortTextField.AccessibleContext.accessibleDescription" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
